--- a/src/pretix/static/pretixbase/scss/error.scss
+++ b/src/pretix/static/pretixbase/scss/error.scss
@@ -1,5 +1,6 @@
-@import "colors.scss";
+@import "_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
+@import "_theme.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
 
 
