--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -1,6 +1,6 @@
-@import "_variables.scss";
-@import "../../pretixbase/scss/colors.scss";
+@import "../../pretixbase/scss/_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
+@import "../../pretixbase/scss/_theme.scss";
 @import "../../datetimepicker/_bootstrap-datetimepicker.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
 
