--- a/src/pretix/static/pretixpresale/scss/waiting.scss
+++ b/src/pretix/static/pretixpresale/scss/waiting.scss
@@ -1,6 +1,7 @@
+@import "../../pretixbase/scss/_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
+@import "../../pretixbase/scss/_theme.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
-@import "../../pretixbase/scss/colors.scss";
 
 
 body {
