--- a/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
@@ -33,29 +33,25 @@
             <div id="advanced" class="panel-collapse collapsed {% if rule.eu_reverse_charge or rule.has_custom_rules or form.errors %}in{% endif %}">
                 <div class="panel-body">
                     <legend>{% trans "Advanced settings" %}</legend>
-                    <div class="alert alert-warning">
-                        <span class="fa fa-fw fa-legal fa-4x pull-left"></span>
+                    <div class="alert alert-legal">
                         {% blocktrans trimmed with docs="https://docs.pretix.eu/en/latest/user/events/taxes.html" %}
                             These settings are intended for advanced users. See the
                             <a href="{{ docs }}">documentation</a>
                             for more information. Note that we are not responsible for the correct handling
                             of taxes in your ticket shop. If in doubt, please contact a lawyer or tax consultant.
                         {% endblocktrans %}
-                        <div class="clearfix"></div>
                     </div>
                     {% bootstrap_field form.price_includes_tax layout="control" %}
                     {% bootstrap_field form.eu_reverse_charge layout="control" %}
                     {% bootstrap_field form.home_country layout="control" %}
                     <legend>{% trans "Custom taxation rules" %}</legend>
                     <div class="alert alert-warning">
-                        <span class="fa fa-fw fa-exclamation-circle fa-4x pull-left"></span>
                         {% blocktrans trimmed %}
                             These settings are intended for professional users with very specific taxation situations.
                             If you create any rule here, the reverse charge settings above will be ignored. The rules will be
                             checked in order and once the first rule matches the order, it will be used and all further rules will
                             be ignored. If no rule matches, tax will be charged.
                         {% endblocktrans %}
-                        <div class="clearfix"></div>
                     </div>
 
                     <div class="formset" data-formset data-formset-prefix="{{ formset.prefix }}">
