--- a/src/pretix/static/pretixbase/scss/cachedfiles.scss
+++ b/src/pretix/static/pretixbase/scss/cachedfiles.scss
@@ -1,6 +1,7 @@
+@import "_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
+@import "_theme.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
-@import "colors.scss";
 
 
 body {
