--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -1,6 +1,7 @@
-@import "_variables.scss";
+@import "../../pretixbase/scss/_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
+@import "../../pretixbase/scss/_theme.scss";
 @import "../../typeahead/typeahead.scss";
 @import "../../charts/morris.scss";
 @import "../../datetimepicker/_bootstrap-datetimepicker.scss";
