--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -296,3 +296,44 @@ table td > .checkbox input[type="checkbox"] {
   width: 100px;
   display: inline;
 }
+.form-horizontal [data-formset] .rrule-form .form-group {
+  margin: 0;
+  width: auto;
+}
+.rrule-form {
+  .form-control {
+    display: inline;
+  }
+  input[type=number] {
+    width: 100px;
+  }
+  .repeat-yearly, .repeat-monthly, .repeat-weekly {
+    line-height: 35px;
+    padding: 0 0 15px 0;
+    margin: 10px 0;
+    border-top: 1px solid $panel-default-border;
+    border-bottom: 1px solid $panel-default-border;
+
+    input[type="radio"], input[type="checkbox"] {
+      top: 2px;
+    }
+  }
+  .repeat-weekly > div.form-group {
+    display: block;
+    line-height: 1;
+    padding-top: 5px;
+
+    & > div {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-content: space-between;
+      div.checkbox {
+        flex-grow: 1;
+      }
+    }
+  }
+  .repeat-until {
+    line-height: 40px;
+  }
+}
