Fix incorrect worker URL

--- a/src/pretix/control/templates/pretixcontrol/pdf/index.html
+++ b/src/pretix/control/templates/pretixcontrol/pdf/index.html
@@ -51,7 +51,7 @@
                     <div id="editor-canvas-area">
                         <canvas id="pdf-canvas"
                                 data-pdf-url="{{ pdf }}"
-                                data-worker-url="{% static "pretixplugins/ticketoutputpdf/pdf.worker.js" %}">
+                                data-worker-url="{% static "pdfjs/pdf.worker.js" %}">
 
                         </canvas>
                         <div id="fabric-container">
