--- a/src/pretix/control/templates/pretixcontrol/pdf/index.html
+++ b/src/pretix/control/templates/pretixcontrol/pdf/index.html
@@ -340,9 +340,9 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="{% static "pretixplugins/ticketoutputpdf/pdf.js" %}"></script>
-    <script type="text/javascript" src="{% static "pretixplugins/ticketoutputpdf/fabric.min.js" %}"></script>
-    <script type="text/javascript" src="{% static "pretixplugins/ticketoutputpdf/editor.js" %}"></script>
+    <script type="text/javascript" src="{% static "pdfjs/pdf.js" %}"></script>
+    <script type="text/javascript" src="{% static "fabric/fabric.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "pretixcontrol/js/ui/pdfeditor.js" %}"></script>
     {% for family, styles in fonts.items %}
     {% for style, formats in styles.items %}
         <span class="preload-font" data-family="{{ family }}" data-style="{{ style }}">
