--- a/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
@@ -77,7 +77,11 @@
                 <input type="number" name="token" class="form-control" required="required">
                 <button class="btn btn-primary" type="submit">
                     {% trans "Continue" %}
-                </button>
+                </button><br>
+                <label>
+                    <input type="checkbox" name="activate" checked="checked" value="on">
+                    {% trans "Require second factor for future logins" %}
+                </label>
             </form>
         </li>
     </ol>
