--- a/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_u2f.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_u2f.html
@@ -13,6 +13,12 @@
     <form class="form form-inline" method="post" action="" id="u2f-form">
         {% csrf_token %}
         <input type="hidden" id="u2f-response" name="token" class="form-control" required="required">
+        <p>
+            <label>
+                <input type="checkbox" name="activate" checked="checked" value="on">
+                {% trans "Require second factor for future logins" %}
+            </label>
+        </p>
         <button class="btn btn-primary sr-only" type="submit"></button>
     </form>
 
@@ -21,6 +27,7 @@
     </div>
     <script type="text/json" id="u2f-enroll">
         {{ jsondata|safe }}
+
 
     </script>
     {% compress js %}
