--- a/src/pretix/control/templates/pretixcontrol/organizers/display.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/display.html
@@ -11,6 +11,7 @@
             {% bootstrap_field form.organizer_logo_image layout="control" %}
             {% bootstrap_field form.organizer_homepage_text layout="control" %}
             {% bootstrap_field form.event_list_type layout="control" %}
+            {% bootstrap_field form.organizer_link_back layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Shop design" %}</legend>
