--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -23,6 +23,15 @@
 {% endblock %}
 {% block page %}
     <div class="page-header">
+        {% if request.event.settings.organizer_link_back  %}
+            <p>
+                <a href="{% eventurl request.organizer "presale:organizer.index" %}">
+                    &laquo; {% blocktrans trimmed with name=request.organizer.name %}
+                        Show all events of {{ name }}
+                    {% endblocktrans %}
+                </a>
+            </p>
+        {% endif %}
         <div class="pull-left">
             {% if event_logo %}
                 <a href="{% eventurl event "presale:event.index" cart_namespace=cart_namespace|default_if_none:"" %}"
