--- a/src/pretix/plugins/badges/templates/pretixplugins/badges/index.html
+++ b/src/pretix/plugins/badges/templates/pretixplugins/badges/index.html
@@ -12,14 +12,19 @@
                 {% endblocktrans %}
             </p>
 
-            <a href="{% url "plugins:badges:add" organizer=request.event.organizer.slug event=request.event.slug %}"
-                    class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new badge layout" %}</a>
+            {% if "can_change_event_settings" in request.eventpermset %}
+                <a href="{% url "plugins:badges:add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                        class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new badge layout" %}
+                </a>
+            {% endif %}
         </div>
     {% else %}
-        <p>
-            <a href="{% url "plugins:badges:add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new badge layout" %}
-            </a>
-        </p>
+        {% if "can_change_event_settings" in request.eventpermset %}
+            <p>
+                <a href="{% url "plugins:badges:add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new badge layout" %}
+                </a>
+            </p>
+        {% endif %}
         <div class="table-responsive">
             <table class="table table-hover table-quotas">
                 <thead>
@@ -33,9 +38,13 @@
                 {% for l in layouts %}
                     <tr>
                         <td>
-                            <strong><a href="{% url "plugins:badges:edit" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}">
-                                {{ l.name }}
-                            </a></strong>
+                            {% if "can_change_event_settings" in request.eventpermset %}
+                                <strong><a href="{% url "plugins:badges:edit" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}">
+                                    {{ l.name }}
+                                </a></strong>
+                            {% else %}
+                                <strong>{{ l.name }}</strong>
+                            {% endif %}
                         </td>
                         <td>
                             {% if l.default %}
@@ -46,8 +55,10 @@
                             {% endif %}
                         </td>
                         <td class="text-right">
-                            <a href="{% url "plugins:badges:edit" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
-                            <a href="{% url "plugins:badges:delete" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                            {% if "can_change_event_settings" in request.eventpermset %}
+                                <a href="{% url "plugins:badges:edit" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
+                                <a href="{% url "plugins:badges:delete" organizer=request.event.organizer.slug event=request.event.slug layout=l.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
