--- a/src/pretix/plugins/badges/templates/pretixplugins/badges/delete.html
+++ b/src/pretix/plugins/badges/templates/pretixplugins/badges/delete.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Badges" %}{% endblock %}
 {% block content %}
-    <legend>{% trans "Badges" %}</legend>
+    <h1>{% trans "Badges" %}</h1>
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
         <p>{% blocktrans %}Are you sure you want to delete the badge layout <strong>{{ layout }}</strong>?{% endblocktrans %}</p>
@@ -12,11 +12,9 @@
 btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
-            {% if possible %}
-                <button type="submit" class="btn btn-danger btn-save">
-                    {% trans "Delete" %}
-                </button>
-            {% endif %}
+            <button type="submit" class="btn btn-danger btn-save">
+                {% trans "Delete" %}
+            </button>
         </div>
     </form>
 {% endblock %}
