--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -35,6 +35,14 @@
                     <legend>{% trans "Check-in" %}</legend>
                     {% bootstrap_field form.checkin_attention layout="control" %}
                 </fieldset>
+                {% if plugin_forms %}
+                    <fieldset>
+                        <legend>{% trans "Additional settings" %}</legend>
+                        {% for f in plugin_forms %}
+                            {% bootstrap_form f layout="control" %}
+                        {% endfor %}
+                    </fieldset>
+                {% endif %}
             </div>
             <div class="col-xs-12 col-lg-2">
                 <div class="panel panel-default">
