--- a/src/pretix/presale/templates/pretixpresale/base_footer.html
+++ b/src/pretix/presale/templates/pretixpresale/base_footer.html
@@ -34,6 +34,6 @@
 {% endcomment %}
 {% with 'target="_blank" rel="noopener" href="'|add:pretixurl|add:'"'|safe as a_attr %}
     {% blocktrans trimmed %}
-        powered by <a {{ a_attr }}>pretix</a>
+        <a {{ a_attr }}>event ticketing powered by pretix</a>
     {% endblocktrans %}
 {% endwith %}
