Fix #767 -- Allow to obtain the list of orders for a question answer

--- a/src/pretix/control/templates/pretixcontrol/items/question.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question.html
@@ -74,7 +74,9 @@
                     {% for stat in stats %}
                         <tr>
                             <td>
-                                {{ stat.answer }}
+                                <a href="{% url "control:event.orders" event=request.event.slug organizer=request.event.organizer.slug %}?status={{ request.GET.status|default:"np" }}&item={{ request.GET.item }}&question={{ question.pk }}&answer={{ stat.alink|default:stat.answer|urlencode }}">
+                                    {{ stat.answer }}
+                                </a>
                             </td>
                             <td>{{ stat.count }}</td>
                         </tr>
