--- a/src/pretix/control/templates/pretixcontrol/event/logs.html
+++ b/src/pretix/control/templates/pretixcontrol/event/logs.html
@@ -31,6 +31,12 @@
                 <div class="row">
                     <div class="col-lg-2 col-sm-6 col-xs-12">
                         <span class="fa fa-clock-o"></span> {{ log.datetime|date:"SHORT_DATETIME_FORMAT" }}
+                        {% if log.shredded %}
+                            <span class="fa fa-eraser fa-danger fa-fw"
+                                  data-toggle="tooltip"
+                                  title="{% trans "Personal data was cleared from this log entry." %}">
+                            </span>
+                        {% endif %}
                     </div>
                     <div class="col-lg-2 col-sm-6 col-xs-12">
                         {% if log.user %}
