Fix logout on reauth page

--- a/src/pretix/control/templates/pretixcontrol/user/reauth.html
+++ b/src/pretix/control/templates/pretixcontrol/user/reauth.html
@@ -21,8 +21,8 @@
             <button type="submit" class="btn btn-primary btn-block">
                 {% trans "Continue" %}
             </button>
-            <a href={% url "control:auth.logout" %}"" class="btn btn-link btn-block">
-            {% trans "Log in as someone else" %}
+            <a href="{% url "control:auth.logout" %}" class="btn btn-link btn-block">
+                {% trans "Log in as someone else" %}
             </a>
         </div>
 
