--- a/src/pretix/static/pretixbase/scss/_theme.scss
+++ b/src/pretix/static/pretixbase/scss/_theme.scss
@@ -104,6 +104,9 @@
     -moz-osx-font-smoothing: grayscale;
   }
 }
+.sr-only.alert::before {
+  background: none !important;
+}
 .alert-success::before {
   background: $state-success-border;
   content: "\f00c";
