--- a/src/pretix/control/templates/pretixcontrol/shredder/download.html
+++ b/src/pretix/control/templates/pretixcontrol/shredder/download.html
@@ -41,7 +41,7 @@
             <legend>{% trans "Step 3: Confirm deletion" %}</legend>
             <p>
                 {% blocktrans trimmed with event=request.event.name %}
-                    Please re-check that you are fully certain that you want to delete the event <strong>{{ event }}</strong>-
+                Please re-check that you are fully certain that you want to delete the selected categories of data from the event <strong>{{ event }}</strong>.
                     In this case, please enter your user password here:
                 {% endblocktrans %}
             </p>
