--- a/src/pretix/control/templates/pretixcontrol/shredder/index.html
+++ b/src/pretix/control/templates/pretixcontrol/shredder/index.html
@@ -14,15 +14,25 @@
             the data will be removed from the server's database. The data might still exist in backups for a limited
             period of time.
         {% endblocktrans %}
+        <strong>
+            {% blocktrans trimmed %}
+                Using this will not remove the orders for your event, it just scrubs them of data that can be linked
+                to individual persons.
+            {% endblocktrans %}
+        </strong>
     </p>
-    <div class="alert alert-warning">
-        <span class="fa fa-w fa-legal"></span>
+    <div class="alert alert-legal">
         <strong>
             {% blocktrans trimmed %}
                 It is within your own responsibility to check if you are allowed to delete the affected data in your
                 legislation, e.g. for reasons of taxation.
             {% endblocktrans %}
         </strong>
+        {% blocktrans trimmed %}
+            For most categories of data, you will be able to partially download the data to store it offline. Some
+            kinds of data (such as some payment information) as well as historical log data cannot be downloaded at
+            the moment.
+        {% endblocktrans %}
         <div class="clear"></div>
     </div>
     {% if constraints %}
@@ -31,7 +41,7 @@
         </div>
     {% else %}
         <form action="{% url "control:event.shredder.export" event=request.event.slug organizer=request.organizer.slug %}"
-              method="post" class="form-horizontal" data-asynctask>
+                method="post" class="form-horizontal" data-asynctask>
             <legend>{% trans "Data selection" %}</legend>
             {% csrf_token %}
             <div class="panel-group" id="payment_accordion">
