--- a/src/pretix/control/templates/pretixcontrol/multi_languages_widget.html
+++ b/src/pretix/control/templates/pretixcontrol/multi_languages_widget.html
@@ -11,7 +11,7 @@
         </span>
     {% elif not widget.official %}
         <span class="label label-warning" data-toggle="tooltip" title="{% trans "This translation is not maintained by the pretix team. We cannot vouch for its correctness and new or recently changed features might not be translated and will show in English instead. You can help translating at translate.pretix.eu." %}">
-            {% trans "Inofficial translation" %}
+            {% trans "Unofficial translation" %}
         </span>
     {% endif %}
     </label>
