--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -64,7 +64,7 @@
                         {% if position.addon_to %}
                             – <em>
                                 {% blocktrans trimmed with posid=position.addon_to.positionid %}
-                                    Add-On to position #{{ posid }}
+                                    Add-on to position #{{ posid }}
                                 {% endblocktrans %}
                             </em>
                         {% endif %}
