--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -86,7 +86,7 @@
                             {% endif %}
                             {% for form in forms %}
                                 {% if form.pos.item != pos.item %}
-                                    {# Add-Ons #}
+                                    {# Add-ons #}
                                     <legend>+ {{ form.pos.item }}</legend>
                                 {% endif %}
                                 {% bootstrap_form form layout="horizontal" %}
