--- a/src/pretix/control/templates/pretixcontrol/item/addons.html
+++ b/src/pretix/control/templates/pretixcontrol/item/addons.html
@@ -30,7 +30,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-sm-8">
-                                    <h3 class="panel-title">{% trans "Add-On" %}</h3>
+                                    <h3 class="panel-title">{% trans "Add-on" %}</h3>
                                 </div>
                                 <div class="col-sm-4 text-right">
                                     <button type="button" class="btn btn-xs btn-default" data-formset-move-up-button>
@@ -63,7 +63,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-sm-8">
-                                    <h3 class="panel-title">{% trans "Add-On" %}</h3>
+                                    <h3 class="panel-title">{% trans "Add-on" %}</h3>
                                 </div>
                                 <div class="col-sm-4">
                                     <button type="button" class="btn btn-xs btn-default" data-formset-move-up-button>
