--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -139,6 +139,9 @@ p.bigger {
 .helper-display-inline {
     display: inline !important;
 }
+.helper-display-none-soft {
+    display: none;
+}
 .helper-display-none {
     display: none !important;
 }
