--- a/src/pretix/control/templates/pretixcontrol/subevents/index.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/index.html
@@ -22,8 +22,11 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 {% bootstrap_field filter_form.query layout='inline' %}
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="col-md-3 col-sm-6 col-xs-12">
                 {% bootstrap_field filter_form.status layout='inline' %}
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                {% bootstrap_field filter_form.weekday layout='inline' %}
             </div>
             <div class="col-md-2 col-sm-6 col-xs-12">
                 <button class="btn btn-primary btn-block" type="submit">
